<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/loginbkg"
    tools:context=".MainActivity">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:background="@drawable/custome_edittext"
    app:cardCornerRadius="30dp"
    app:cardElevation="20dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:padding="20dp">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:id="@+id/loginText"
    android:textSize="@dimen/text_size"
    android:textAlignment="center"
    android:textStyle="bold"
    android:textColor="@color/purple" />

 <EditText
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:id="@+id/email"
     android:background="@drawable/custome_edittext"
     android:drawableLeft="@drawable/baseline_email_24"
     android:drawablePadding="@dimen/input_padding"
     android:inputType="textEmailAddress"
     android:hint="@string/Email_hint"
     android:padding="@dimen/input_padding"
     android:textColor="@color/black"
     android:textColorHighlight="@color/cardview_dark_background"
     android:layout_marginTop="@dimen/margin_Top" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/password"
        android:background="@drawable/custome_edittext"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="8dp"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:padding="@dimen/input_padding"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/loginButton"
        android:text="login"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/purple"
        app:cornerRadius="20dp"
        />
</LinearLayout>
</androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/last_text"
        android:textSize="14sp"
        android:textAlignment="center"
        android:id="@+id/signupText"
        android:textColor="@color/purple"
        android:layout_marginBottom="28dp" />


</LinearLayout>